[package]
name = "newsboat-archiver"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.3"
chrono = "0.4"
clap = "2.33.3"
scraper = "0.12.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false